k8s/base/grafana/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: observability
    app.kubernetes.io/name: grafana
    app.kubernetes.io/part-of: schwab-assessment
  name: grafana
  namespace: observability
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: grafana
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/component: observability
        app.kubernetes.io/name: grafana
        app.kubernetes.io/part-of: schwab-assessment
    spec:
      containers:
        - env:
            - name: GF_SECURITY_ADMIN_PASSWORD__FILE
              value: /var/run/secrets/grafana/admin-password
            - name: GF_PLUGINS_PREINSTALL_SYNC
              value: grafana-bigquery-datasource@3.4.0
            - name: GF_PATHS_PLUGINS
              value: /var/lib/grafana/plugins
          image: docker.io/grafana/grafana@sha256:7891f7d85a024b6ebe70103aaf7a51a8b1c0da653307cfd938ec3aa4810bba0b
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /api/health
              port: http
            periodSeconds: 10
            timeoutSeconds: 2
          name: grafana
          ports:
            - containerPort: 3000
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /api/health
              port: http
            periodSeconds: 5
            timeoutSeconds: 2
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 250m
              memory: 256Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
          volumeMounts:
            - mountPath: /etc/grafana/grafana.ini
              name: config
              readOnly: true
              subPath: grafana.ini
            - mountPath: /etc/grafana/provisioning/datasources
              name: datasources
              readOnly: true
            - mountPath: /etc/grafana/provisioning/dashboards
              name: dashboard-providers
              readOnly: true
            - mountPath: /var/lib/grafana
              name: data
            - mountPath: /var/lib/grafana/plugins
              name: plugins
            - mountPath: /var/lib/grafana/dashboards
              name: dashboards
              readOnly: true
            - mountPath: /var/log/grafana
              name: logs
            - mountPath: /tmp
              name: tmp
            - mountPath: /var/run/secrets/grafana
              name: grafana-secrets
              readOnly: true
      securityContext:
        fsGroup: 472
        fsGroupChangePolicy: OnRootMismatch
        runAsGroup: 472
        runAsNonRoot: true
        runAsUser: 472
        seccompProfile:
          type: RuntimeDefault
      serviceAccountName: grafana
      terminationGracePeriodSeconds: 30
      volumes:
        - configMap:
            name: grafana-config
          name: config
        - configMap:
            name: grafana-datasources
          name: datasources
        - configMap:
            name: grafana-dashboard-providers
          name: dashboard-providers
        - emptyDir: {}
          name: data
        - emptyDir: {}
          name: plugins
        - configMap:
            name: grafana-dashboards
          name: dashboards
        - emptyDir: {}
          name: logs
        - emptyDir: {}
          name: tmp
        - csi:
            driver: secrets-store-gke.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: grafana-secrets
          name: grafana-secrets
